@@ -86,7 +86,6 @@
     </Compile>
     <Compile Include="revit-scripts\ManageFiltersOnSelectedViewsOrViewTemplates.cs" />
     <Compile Include="revit-scripts\OffsetCropRegionOfSelectedViews.cs" />
-    <Compile Include="revit-scripts\OffsetViewOrigin.cs" />
     <Compile Include="revit-scripts\SectionBox3DFromViews.cs" />
     <Compile Include="revit-scripts\CloseCurrentView.cs" />
     <Compile Include="revit-scripts\CloseViews.cs" />
